--- a/package.json
+++ b/package.json
@@ -9,10 +9,32 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/webpack-config": "^19.0.0",
+    "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-native-picker/picker": "^2.5.1",
+    "@react-navigation/bottom-tabs": "^6.5.9",
+    "@react-navigation/native": "^6.1.8",
+    "@react-navigation/native-stack": "^6.9.14",
+    "axios": "^1.5.1",
+    "country-state-city": "^3.2.1",
     "expo": "~49.0.13",
+    "expo-checkbox": "^2.5.0",
+    "expo-image-picker": "~14.3.2",
     "expo-status-bar": "~1.6.0",
+    "jwt-decode": "^3.1.2",
     "react": "18.2.0",
-    "react-native": "0.72.5"
+    "react-dom": "18.2.0",
+    "react-native": "0.72.5",
+    "react-native-country-picker-modal": "^2.0.0",
+    "react-native-dotenv": "^3.4.9",
+    "react-native-element-dropdown": "^2.10.0",
+    "react-native-image-slider-box": "^2.0.7",
+    "react-native-phone-input": "^1.3.7",
+    "react-native-reanimated": "~3.3.0",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
+    "react-native-svg": "13.9.0",
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
